--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.social.twitter.appId=WnJM5bdBw2yO4lfcSXLhu1rqI
 spring.social.twitter.appSecret=WR6acNd0Sy7NEDUYHk7YyIsJzQlQvY35nuLgsITQ2HicYrtd8k
-security.basic.enabled=false
 spring.social.auto-connection-views=false
+
+security.basic.enabled=false
+
+spring.datasource.url=jdbc:h2:mem:social;DB_CLOSE_ON_EXIT=FALSE
