--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-social-twitter')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	compile('com.h2database:h2')
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
+
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 
