Initialize the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.social.auto-connection-views=false
 
 security.basic.enabled=false
 
-spring.datasource.url=jdbc:h2:mem:social;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.url=jdbc:h2:mem:social;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/social-test
