Remove API information
I have also regenerated the keys so don't bother going through
the history :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.social.twitter.appId=WnJM5bdBw2yO4lfcSXLhu1rqI
-spring.social.twitter.appSecret=WR6acNd0Sy7NEDUYHk7YyIsJzQlQvY35nuLgsITQ2HicYrtd8k
+spring.social.twitter.appId=// TODO
+spring.social.twitter.appSecret=// TODO
 spring.social.auto-connection-views=false
 
 security.basic.enabled=false
